fixed cropping error

--- a/static/app/profile.css
+++ b/static/app/profile.css
@@ -14,7 +14,7 @@
 
 .profile-header-main {
   display: grid;
-  grid-template-columns: 20% 1fr;
+  grid-template-columns: 150px 1fr;
   grid-gap: 50px;
 }
 
@@ -27,7 +27,8 @@
 }
 
 .profile-picture {
-  width: 100%;
+  width: 150px;
+  height: 150px;
 }
 
 .profile-body {
